tests/neg/binaryAPI.check
-- Error: tests/neg/binaryAPI.scala:6:17 -------------------------------------------------------------------------------
6 |@binaryAPI class C: // error
  |                 ^
  |                 @binaryAPI cannot be used on class definitions
-- Error: tests/neg/binaryAPI.scala:8:19 -------------------------------------------------------------------------------
8 |    @binaryAPI def g = () // error
  |                   ^
  |                   @binaryAPI cannot be used on local definitions.
-- Error: tests/neg/binaryAPI.scala:10:19 ------------------------------------------------------------------------------
10 |class D[@binaryAPI T] // error
   |                   ^
   |                   @binaryAPI cannot be used on type definitions
-- Error: tests/neg/binaryAPI.scala:14:16 ------------------------------------------------------------------------------
14 |@binaryAPI enum Enum1: // error
   |                ^
   |                @binaryAPI cannot be used on enum definitions.
-- Error: tests/neg/binaryAPI.scala:18:18 ------------------------------------------------------------------------------
18 |  @binaryAPI case A // error
   |                  ^
   |                  @binaryAPI cannot be used on enum definitions.
-- Error: tests/neg/binaryAPI.scala:19:18 ------------------------------------------------------------------------------
19 |  @binaryAPI case B(a: Int) // error
   |                  ^
   |                  @binaryAPI cannot be used on enum definitions.
-- Error: tests/neg/binaryAPI.scala:5:16 -------------------------------------------------------------------------------
5 |@binaryAPI type A // error
  |                ^
  |                @binaryAPI cannot be used on type definitions
-- Error: tests/neg/binaryAPI.scala:12:17 ------------------------------------------------------------------------------
12 |def f(@binaryAPI x: Int) = 3 // error
   |                 ^
   |                 @binaryAPI cannot be used on local definitions.
